Corrected assignment spec configs

--- a/config/4.cfg
+++ b/config/4.cfg
@@ -1,4 +1,4 @@
 router-id 4
-input-ports 10042 10045
-outputs 10024-1-2 10054-1-5
+input-ports 10043 10045 10047
+outputs 10034-4-3 10054-2-5 10074-6-7
 
