--- a/config/1.cfg
+++ b/config/1.cfg
@@ -1,4 +1,4 @@
 router-id 1
-input-ports 10012 10016
-outputs 10021-1-2 10061-5-6
+input-ports 10012 10016 10017
+outputs 10021-1-2 10061-5-6 10071-8-7
 
