added 4.cfg, a stub router

--- a/2.cfg
+++ b/2.cfg
@@ -1,4 +1,4 @@
 router-id 2
-input-ports 10021 10023
-outputs 10012-1-1 10032-1-3
+input-ports 10021 10023 10024
+outputs 10012-1-1 10032-1-3 10042-3-4
 
